<resources>
    <string name="app_name">Test Zone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="label_hello_world">Hello Square World!</string>
    <string name="roll_button_label">Roll</string>
    <string name="button_count_up_label">Count Up</string>
    <string name="reset_button_label">Reset</string>
    <string name="name_label">Pedro Balanco</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Hi, my name is Pedro.
        \n\nI love fish.
        \n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
        \nFun fact is that I have several aquariums and also a river.
        \n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
        \nAnd sometimes I even go fishing.
        \nAnd even less sometimes, I actually catch something.
        \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
        \n\nI\'ll be happy to teach you how to make your own aquarium.
        \nYou should ask someone else about fishing, though.\n\n</string>
    <string name="what_is_your_nickname_hint">What is your Nickname?</string>
    <string name="arrow_up_image">Arrow Up Image</string>
    <string name="done_button_text">Done</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to Play</string>
    <string name="tap_the_screen_and_buttons">Tap the screen and buttons</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>

    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="button_play">Play</string>

    <string name="dollar_sign">$</string>
    <string name="zero">0</string>
    <string name="dessert_sold">Desserts Sold</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>

    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="end_game">End game</string>
    <string name="word_is">The word is…</string>

    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>

    <!-- Button labels -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- Sleep quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <!-- Toast to play after Clear button has been pressed -->
    <string name="cleared_message">All your data is gone forever.</string>

    <string name="minutes_length">%d minutes on %s</string>
    <string name="hours_length">%d hours on %s</string>
    <string name="seconds_length">%d seconds on %s</string>
    <string name="close">Close</string>
    <string name="header_text">Sleep Results</string>

    <string name="show_all">Show all</string>
    <string name="show_rent">Rent</string>
    <string name="show_buy">Buy</string>
    <string name="type_rent">Rent</string>
    <string name="type_sale">Sale</string>
    <string name="display_type">For %s</string>
    <string name="display_price_monthly_rental">$%,.0f/month</string>
    <string name="display_price">$%,.0f</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_gdg">"Couldn't find a GDG in your region? Great, go ahead and start one. Fill the form below and
        expect to hear from us shortly! "
    </string>
    <string name="application_submitted">Got your application request!! Oh well, not really. This is a test form just
        for educational purposes. If you really want to submit your application please visit the website!
    </string>
    <string name="gdg_search">GDG Search</string>
    <string name="gdg_apply">Apply to run GDG</string>
    <string name="gdgs_are">GDGs Are…</string>
    <string name="gdg_description_long">GDGs are local groups of developers who are specifically interested in Google
        products and APIs. Each local group is called a GDG chapter and can host a variety of technical activities for
        developers - from just a few people getting together to watch our latest videos, to large gatherings with demos
        and tech talks, to hackathons. Google Developers supports and recognizes GDG chapters, but doesn’t own or manage
        them.
    </string>
    <string name="about_google_developer_groups">About Google Developer Groups</string>
    <string name="gdg_description_bullets">️Run by passionate individuals in local developer communities\n
        ️A group to share ideas and network with fellow developers \n
        ️A place to learn about Google technologies and development tools \n
        Open to and free for all interested
    </string>
    <string name="waiting_for_location_and_network">Waiting for location and network result.\n\n If running on an
        emulator open the Maps app to enable location services.
    </string>

    <string name="stage_image_description">Photo from stage from a devfest</string>
    <string name="submit_button_description">Button to submit form</string>
    <string name="form_name_description">enter your name</string>
    <string name="motivation">Tell us a bit more about why do you want to start a GDG</string>
    <string name="your_name_label">Your name</string>
    <string name="email_label">e-mail</string>
    <string name="city_label">city</string>
    <string name="country_label">country</string>
    <string name="region_label">region</string>
    <string name="enter_motivation">Please enter your motivation in 1-2 sentences</string>
    <string name="submitted">Submitted, no need to submit again</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
</resources>